package jayslabs.section9.filter;

public enum Category {
    STANDARD,
    PRIME;
}
